--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log Submission</title>
+    <title>rexzy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Submit Log Info</h2>
+        <h2>I'm currently offline so I will help you hit your log tomorrow.</h2>
         <input type="text" id="discordUser" placeholder="Enter Discord Username">
         <textarea id="logInfo" placeholder="Enter Log Info"></textarea>
         <button onclick="showToS()">Submit</button>
