--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>I'm currently offline so I will help you hit your log tomorrow.</h2>
+        <h2>I'm currently offline so I will help you hit your log tomorrow. I also reccomend you try hitting it.</h2>
         <input type="text" id="discordUser" placeholder="Enter Discord Username">
         <textarea id="logInfo" placeholder="Enter Log Info"></textarea>
         <button onclick="showToS()">Submit</button>
